# RegistrationBot

./: .gitignore  Cargo.toml  Justfile  Makefile  Rocket.toml  flake.nix
commands/: create_event.json
loadCommands/: main.py
scripts/: sync_commands.py
src/: lib.rs  main.rs
src/comands/: create_event.rs
src/commands/: create_event.rs  mod.rs
src/discord/: aio.rs  embed.rs  emoji.rs  interaction.rs  interaction_response.rs  mod.rs  user.rs
src/discord/embed/: README.md  embed_field.rs  embed_footer.rs  embed_image.rs  mod.rs
src/discord/interaction/: README.md  command_option.rs  interaction_data.rs  interaction_metadata.rs  member.rs  message.rs  mod.rs  user.rs
src/discord/interaction_response/: README.md  interaction_callback_data.rs  message_component.rs  mod.rs
src/entity/: aio.rs  interaction.rs  interaction_response.rs  mod.rs  user.rs
src/fairing/: button_interaction.rs  mod.rs
src/guards/: key_guard.rs  mod.rs
src/interaction_handler/: application_command.rs  message_component.rs  mod.rs
src/interaction_handler/interaction_table/: mod.rs
src/interaction_handler/interaction_types/: mod.rs  modal_submit.rs
src/interaction_handler/interactions/create_event/: event_data.rs  mod.rs  role.rs
src/persistence/: file_storage.rs  mod.rs  redis_storage.rs
src/request/: mod.rs  raw_body.rs
src/utils/: crypto.rs  logging.rs  mod.rs  snowflake.rs  timestamp.rs
