[package]
name = "registration-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
deadpool-redis = "0.20.0"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
reqwest = { version = "0.12.15", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.20"
tokio = "1.44.1"
